--- a/TextReader/Form1.resx
+++ b/TextReader/Form1.resx
@@ -120,4 +120,102 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAAAAAAAEAIACXFQAAFgAAAIlQTkcNChoKAAAADUlIRFIAAAEAAAABAAgEAAAA9ntg7QAAFV5J
+        REFUeNrtnXmUVNWdxz/V1XvTdDc00AvQINDsu0BccDCKYoCIcYxRMzoxKgqTjEYw45bBaBQX1Hh0NGOc
+        zMRMHM/EaFTUcUEUEGygWZt9ERrojbb3vbpq/uBRVFX3u1Vd9ar6varf953Tp6rve+++evfz7r3vd3/3
+        d20YrYFcxXymkU8ysSYHx3mP37E35n65pnjm8ymNuGJ4c/IVM2Oz+JNZRlVMF/7ZbSNjY6/447gnxp99
+        z201g61RbHbDznQZz5EVq21fF41iAGtpjR0A+vIUU6XcPTSBRNbTESsAzOY+kqTUPRTHVJopwhkbANzK
+        XClzHyVwPuXsMDunRiieyVLe3SiLx1ho7kuMN+QsSfTv8j8np63QCTJAmfTVTcvjKarZEO0AxHdznkbu
+        ZaOBbxlmlY27uVORPppV3Mqe6AagO3VynMMxUQOc9pM+i1XcQak5Lz7Oouc2Uw3g/3fO4wn6xR4AonP6
+        EQ+TKgDEruws5mckCACxqxT+hX8w3/0WACKnTB5lgQAQy8rjaWYLALGsQlYxXgCIZc3gaYYIALGsq8xk
+        FRAAekM38CuzWAUEgN6564u5O4xmeAHA9EpmOTdjEwBiV5k8agZfAQGg95THU1wsAMSyRvMsEwSAWNYM
+        nqZAAIhlzePxbhzqBIAY0vU8TJoAELuys5i7e8tXQAAwg5JZzi29YxUQAMyhDH7N9wWAWFYuT/aGVUAA
+        MI96xSogAJhJM1jFUAEglnUFKxkgAMSyruehSFoFBACzKY47ImkVEADMp2SW85NIWQUEADMqgxVcLQDE
+        snJ5KjIzCAQAs2oUqyJhFRAAzKsZrAq/r4AAYGZdweNkCwCxrOv5FX0EgNiVPdxWAQHA7EpiWTitAqaY
+        naLD/tkIY04cPmk24rVb4uoSjFWVZk1l8AhVvB1rAFyo+cjEsZNXaPFKm8ASEgEbNTxFhVfaeBaTCtjY
+        zKtd0LGmcniSar40M6NFXQKmf8uckM75XVq0M+3uMp16qTuXhi4hau9ypz0Skd9u4zcRCUC/hYnhuHzz
+        9gEOc0j7NJg8n1prhvtzqk+4hXj3bWri66h4+s9qenisAuYF4BT7tE9pPoWcySSP6x/v1Yz1dUctPk5J
+        VAEAc3nCeKuAeQHooBiX9lR7h6IeRb7Ht7FkenzL4zztUwmnogwA+CEPG20VMPNrYBHN2qfRXj97PNmA
+        U4vEP4JBHmkTydA+WWCxhh7LzmLuITFWADjsjq87nBz3f+OZShxQpvURMrwWaJpECgC1FEdd8UMYrAJm
+        BqDCHWN7sMcSTH20pWlO8BUAKR49gnT3+NkhDkQlANCXFVwTGwC0uFfbSPHoBg5jGABH2EUnAOPcS1Rm
+        M077tJPKKAUAclhpnK+AuU3Bm2kCwObRDZyozaUt4ZBm5hnl9qMdxUAAnKzXOpDRqVGsNMp93NwA7KNc
+        +zRaW5UjjskkAg52c4RGAArcbwXTNH/aKrZHcfEDXMC1sQBAFbu1T0O0XkC61gMo4xBVfANAmtbyJzBR
+        6x7t1VKiVzYuMcaMb24AGt1Pcp5W5eVQCMBRSqnRViQ5aycYwBht72JqInaNvTXkNNCY10HzDgad0TYa
+        6QMkMZaPgPHa6qQl1AP7tb0K6UMjuVr3sE17PzirbM4n17BXpwq2+Aw/ncTVC1O7E4zxEjA7ALs5rRmB
+        JhCHk4mkAU6KtNRWkoECBtHIONIBKGOXxxnG8gyXGGg86aCIZV5Who0cddsfLSezO4RUui36o0klRWvt
+        v9X6BnuoAyCfPGCy9kzs5KT7+GSW8z36kGjYlsalPKihhnYVL7ptlgKAwWpgm/Ypl3yytPf8gxwHoFzr
+        BaRSSJK7B7BVe3kEyA5xULp7zfIal3PyCr9kP+10hmkL4/KzZm8CYDvNpAIDGUKd9sK3hyoAainhQiCO
+        seRoPYBGNnoc7QqLPcD3rC28xIdMJTcs6yQ6KeRWzcQdgwDsoooCoA/D6CAFcFCkFYCDEpzEAcPJ1+A4
+        5h5GBqjmU+4w/Jo2dHnNdHE4jKskXsKNsQvAKQ5oFe4YbCTi2SzALurJBHKZrnUWt3kZgVt5miwupy82
+        A+oCGy4aWcdjHo1MJBTGhtr8ADSxRXP7mq55Bh70WIXzIFVkAjnMIQ7oZDNtXscf4nYmk23Qi5qLGnbw
+        renvWhQB4GIbbSQBU7S+9m6tBwBQw15GATnMxgbUai+Inqozsztlb8sK8wL2aIaXTPIAB8XaKCBAo/bO
+        n8IAbHh6EoqiBoBjHPH41sBWr9QSr0XqiyJoBBYAIqRmtnh8O+rTA9/rUeTtbPGoHURRAoCTrR6mkF1U
+        +9QP5+x+1VHqCBZGmb8TeKbQv2AgTsDFWp/RtyY+JpVOwM4WjkqRRiMA+7mJRFyAq8srWDtP8++4ABtN
+        EX4/FwAiJAdlitRaaqUgg5VMDxcARAKASAAQCQAiAUAkAIgEAJEAIBIARLEgc5uCUywJqIt264SnMy8A
+        edzEDFItCICTUt5ibTi9+aMfgGye5zoLFv5ZXc0S3rXChZq1ip1rZBiUXlA+S8Mb5TvaASi0yEC1voZq
+        kUwEgKB03BotqEJV1vBSMCsAn7DW0sVfx2vazGWTy6wV7QmWchcz3PG/rCQnp3iDt6xxseZtafexjPSw
+        zLYNt1y0auGrBICQ1BFNc/DMKjEFCwAiAUAkAIgEAJFZFca4xwKA1AAiAUAkAIgEAJEAIBIARAKASAAQ
+        CQAiAUAkAIiiW+b1CIpjLKMt6hNYSbFVIpeZFYB4buc+hlq0hmriI+7zinBs4ufMnJrFCoZZtoFK41ru
+        tcbUFrPe4ou0VYCtq9nuFY0FgCBk/aWfLfILzArAemVwWCtorTUWsDdrO1XEw9zP4F5YktUItbKaZ62x
+        coFZAejkD6xjjEUDRJxiJ/XWuFjz9lSdHOCAJZ9/S0ksgQKASAAQCQAiAUAkAIgEAJEAIBIARAKASAAQ
+        CQAiAUAkAIgEAJEAIBIARAKAKJpk5qlhIxhnjWVXfNTJCfEJDFV2buF+8i3rFfwB93NcAAheM3iMXEsW
+        PkAyN1LFvVZwDDdrH2C2hYv/jC61xuQ2swJg/c6pRRovs97oDVRZHID11vgFZgVgEyv4xrJLxzXyV56x
+        xvrBZu0EOniFdYy15NSwTsrZLBFCQpWTXeyyaA1gIYklUAAQCQAiAUAkAIgEAJEAIBIARAKASAAQCQAi
+        AUAkAIgEAJEAIBIARAKASAAQRZPC6RJmE8AMkTOcLubhAyCF25hr0ald5pKLAlKsB0AyN0rZmV9SRQsA
+        IgFAJACIBACRACASAEQCgEgAEMWILLHGfRjVQisdOIAE4kkhOaK5t9GMAwedxBFHIsmkRNp4HhkAOmmm
+        jTbaaKCRJppopo12nDhwEEcCCSSQThZZZJBGH9LCeiOaqWAfJRzjFLW00oqNZJLJJJ8CxjGGgWELTeGk
+        mkr2coCTVFJLK210YCeeNNLJJJehFDKcAaRHAwBH+YxSyiinhhpqaaYTJ046ceHCBbgAGzZs2InHTho5
+        DGYIY5nISLJJMPR62jnCZ3zODspo6TYEjZ1k8pjCpVzGcENzd3CCzaxjC4dpoBWXzn4JJDGAccxgDlPI
+        MHcVekYZFGkF6rv9gbSg0cxiAnfwJ464cQlta+VLFjM8QOjjGcESvqLNkLwbWMPPGd3DUb0s5rND54xF
+        ZkJDH4BXQ36GkhjHcjbSHmIRbOWnQUTuy2UJu0LMuYnVLKJfUL8+i41WByDRkBxyWEIxziCLoJbnGRF0
+        3mN5lcagi/9rbiQz6LxnUiUAnNUwnuB0EEVwiJtCrIdSuIuyIHKu4bcMDynnu+gQAM4pnoW6OeltG7nQ
+        gJxtLGB/j8G7IUTw4vm97tljEgCAQv7ag6ZgHZMNy/lyDvSg+DcxO+Qcc9gqAHRVLv8VIAKbmGRozt+j
+        NMDi38BEA/K7kJroB8CGHXsPzT6DeCOAQjjMJQGcK45U0kkL6OXQxmIaAur4GVPv/DOOcAPQe6bg4Uwj
+        n/6kkYiNNhqp4iQHKQ1grY0K7ieXv1PuU88jfKncI4nRfIdx5JJKG5XsZxO7aVIc4eKPjOef/OB6hGXs
+        COAOJJFOPrlkkoyNdho4TSl1NGtRhhOYjt08T7nRNcBDNPns66SBUtbwr1wUgE3+Yo4pn8KXSVI+9xfw
+        Gsd9nrBy/sKVfuqsEYp2+cwr5y0BPHZjuYPX2cEpammmnXZaqaeSQ3zJS/wjk0kin22KfCzfBDyh+HGV
+        /IlL/NL/C4VxaCeFiiPTuFe3NT/NkwxQ5vvjLuh6bi/4ASiOWfwbh5XWTQel/C8rlc2N5QF43E87Ws4K
+        spW5DuBTnWM7WKI4ri/P0qrIuZP/IU95/Pu6x25npPKac/g1JwwxLkc9AC46eZNhynyv07HQrWeQ7jFJ
+        /EbXuHJu+6PSeneNzrPZwk+U1zuZD4O2ZsYgAC5cvMtgRb5ZfNzNMe3crqzA6wPIt4MHFc4yGXzW7VEf
+        Ky3+57PZoMI3EACzewQt4CHFeGINb9HR5b/7+Vj3iFEsC2icPZ6lCgtiHW93M5Tcyut8q3tMIS9wvvlu
+        sNkBsPFjrlOkr+lmdb4PdVfsi+PmgN/Qc1miGLxdw7Eu/yvhE93903mIC8x4g83vE5jGEkUzUMpGn//U
+        85Guq8VIftiDnK9UFNkhtnf532rKdff/AX9vzttrBafQqSzUTWtlk09lvJ8S3b3n9WhQuB+LdA1l7azz
+        wexb1ihqk7vCN8E7+gGIZ5Giw7PDp93dpLtcWx/m9tCydrli+coiGr2+H1CscHQl08x6c63hFj6N0bpp
+        h6n2ejJ36C42V9DjYhiq6LadpNTr+xZqdPZM4RqDPRtjDoD+TNdNq+cbj28NigZgoh8LX1elKZCp8MrX
+        xRbdnsco8z7/VgHAxhTdtA6vJ7Gqm975WU0J4jmcoPsS2uKVbx2HFPnmCACh6jzd4aEOr773SZp19rNz
+        XhD5jlBYIU55PPMVVOje4fFmnn5jFQAydbuBLq81Osto09kvQ2Ee1lc2WbppZR7Lw1d79UQ8leRndEAA
+        CEhpiifRcwS/QheAPkH55ibRXzet3qO7WUeDzl6J5AsAoStB0X47vGDQ64olBzVFJZ6+umktHnnV6i4V
+        naCoQwSAHlxnYFfaqkAoMah89d1K2jwAaFDUIaaegGsVAByKxdg964Z23b1sQf5Wm6J2OKcOxV6mvsdW
+        AaBdUbSeVbu+pc/p0WULXC5F0aZ43D2b4so7MbGsAkCjj+HV8wnN9PimX2F36HYPVXIonEQ95/Lr+zC2
+        BZWvAOCjWl1f4Xgv+57+rP5mRTuNAhv9Ef4sj7uXojhDhQAQur7RrYq9X7P6674tNHrZCwJVowKAPI8G
+        J0MxblgqAIQqFzt101Ip8PiWo1sZ11MWRM6liibA03G0n66hqo29AkCoqlcAMNjLdzhfFwAX+3VtBPra
+        r9v3SPey8Gcp3vZ36Z5DAAhQeziomzbO69bnKYJAFPe4O+Zit27Tk+PlsTxIMeCz3WvcUAAIQp9TqXv9
+        U716/n0Zo3uWvbq+gno6zWbdtMFefY9MxUSUMj4VAEJROW/rpmX5+O2lKuYDl7KphznvVrTf03zeOKbp
+        2gKcvMVpASB4vaPoAUxirM9/Zul2xzp4j5Ye5Ovifep00pK7zDyeqZjHVMQ7AkCwOsQrulZAG/O6dL4m
+        K2YTfaGo0rvqIKt100Z0cS8vVNQ97bykcBgRABRq4hnFVOsCruryvwFcrrt/Ff8RcB3g4r85oJs6myE+
+        /8ngMoVBeDsrgzJExTgAHbzM64r0hV0aALAzXzFB623eCzDvr/lP3dfGDK7t5s4tZKjifK+zSjFWaXGF
+        Z25gK79VOnEM0Zlr18B8xVFT2BnAzLty5Tmuoq7b+YR3Ku9SGr/q9jiZHNrtVsZ99FHm+oBuAJW/KJ0/
+        5nHYb1zBOxV1Yxpv6kYkU3v/JHIzewUA/wA08S5z/DRPsxQRQupYoDz2CmXsjRPcpnTiWKQ7v9jBMr/3
+        ajwvBBQhwEG1ciq55QFYqfOzv+HPXOP3x2UrgjS4cPGpnzkAY/hdt0Enm/mAOcoYQDk6U8PPbAcDmAEc
+        zzRWsJ6KbgvYQTnFvM7N3EBt+AHoPXelco6SpD3lnbTTxCn2UMw2DiicP84ohQe66f97ag4/5UmF7X8f
+        P+fPXM1s8kgngU6aOc1W/sZnujN8AOwsVQanGskD3KYYQQRwUEwxzzOGQkYymP6kYKOJRk5zjBMc5yjV
+        dJJPqTVihQdXA/ShkOnMZCYzmUoh2SQH+E4Szy+UUXrObCeZ6/dMcWQznav4Ad/nYoYEMHFkEZV+8m3n
+        kR54H9pIIIlkUkgiwcefKY2/RXMTEKwSWUJ1QN2kzd28JIamWZQEkG89Sw1a7mKVAOCrVJYrW0bv7T0/
+        MYZ6pvGsCzDfSm41JMLfbYo4aDEJwFBeDKDy99ze9nIXCUVTAy5+Fy6+5W5lnMLAdJHCbhBzACSykA1B
+        xNj6P6aGnLeNuRT3MN9GnlMGuApEBYrw1DEFQDzf4TVF4GT1tpNFIc3Pz+AeTgWV8+dcHmLOHwgAGVzG
+        74MsgHMV8nNBrhgSz6W8owwr6a838CKTQhhxed76AAT/BGQxg3v5uAedPtW2g+U97A8kcwEvUhFyzkd4
+        gYuDXIbuQd1GzyKGIDt2xdya7pRCOgOZyFSmMZl+ho1XTuIJbuR9PmCPrpvHWSWSz4Us4LtBLDPVVcP5
+        GT9iA2v4kmMBOqcnM4CJXMGCcC8kaczpM/iEGd2mHOZzyqmihhrqaKKJFhxuqs9M+rSRRBb9yCKHAoZQ
+        wDAywraG52mK2coW9lJNC+3alLE47CSQTDojmMxkZlFgQC/eW51UsZsSStjPKeppo5NOnLiwEYedeBJJ
+        I5dhjGQcEylQDmltZq5fkE0AwNmf3kGHtkhqJ+104MBJBzYSSSCRBO1vUsTi4zfRQBXHqaaZZiCZVLLI
+        ZxB9SQ+zl0QHjbRQTQWNtNKKQyv6vvSnH6mkBBRSziAAIjMWYMce4VV5/SmNNHIMWdal50ogiyzyeil3
+        H8nq4TEuAUAAEAkAIgEgJKkCuIjCI0cP7SthBaDNvFOfolZVfv2mIloD7EAUWe0wptY1qg+wNoDlHkXG
+        qd7PopgRB6CIL6RUIqi1fG3MiYwyvbZTxZV+JnKIjFIl97HPXACcCeM0OwxrhYt81cQjvBlEuJswA+Bi
+        G01MD3LcWxSoqniUl4177TZy9K2TzexiIIOkHgiTGvmCX/KGMRaAMzLe3WAg85jPNPLNuk6WJdXCSbay
+        mo90l8QKUv8Pgkx3yegro9kAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
